syntax = "proto3";
package version1_2;

message Chain {
	bytes latestBlockHash = 1;
	bytes parentBlockHash = 2;
	uint64 height = 3;
	uint64 requiredBlockNum = 4;
	bytes requireBlockHash = 5;
	uint64 recoveryNum = 6;
	uint64 currentTxSum = 7;
}